<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChosePrivacySettings"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/effect_btn_back"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy"
            android:fontFamily="@font/roboto"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/row1_body_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/privacy_settings_back"
        android:layout_marginTop="50dp">
        <TextView
            android:id="@+id/changePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Change_pass"
            android:fontFamily="@font/roboto"
            android:textColor="#29292E"
            android:textSize="16sp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="12dp"
            />
        <TextView
            android:id="@+id/changePinCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Change_pin_card"
            android:fontFamily="@font/roboto"
            android:textColor="#29292E"
            android:textSize="16sp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/changePass"
            />
    </RelativeLayout>
</RelativeLayout>