<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_make_card_bg"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/making_card"
                android:textColor="#168E16"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/You_must_pay_a_fee_to_make"
                android:textColor="#6B5E5E"
                android:textSize="13sp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="75dp"
            android:layout_marginLeft="25dp"
            android:layout_centerHorizontal="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/date"
                        android:textColor="#F57E85"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/dateDialog"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="20/5/2019"
                        android:textColor="#000000"
                        android:textSize="14sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginLeft="100dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/time"
                        android:textColor="#F57E85"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/timeDialog"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="20/5/2019"
                        android:textColor="#000000"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/Account"
                android:textColor="#F57E85"
                android:textSize="14sp" />

            <RelativeLayout
                android:id="@+id/infor_top_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avtDialog"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:civ_border_color="#ffffff"
                    app:civ_border_width="3dp"/>
                <TextView
                    android:id="@+id/mName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tuan Khanh"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat"
                    android:layout_toRightOf="@+id/avtDialog"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:id="@+id/mEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="tuankhanhspkt@gmail.com"
                    android:textSize="12sp"
                    android:textColor="#d5000000"
                    android:fontFamily="@font/montserrat"
                    android:layout_toRightOf="@+id/avtDialog"
                    android:layout_below="@+id/mName"
                    android:layout_marginLeft="10dp"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/fee"
                android:textColor="#F57E85"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="20.000 VND"
                android:textColor="#000000"
                android:textSize="12sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/txtbottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/confirm_make"
            android:textColor="#8F2323"
            android:textSize="11sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/body"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/btnOkDialog"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:layout_below="@+id/txtbottom"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="29dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_wave_eff"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>
</RelativeLayout>