<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationLostCard">
    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/effect_btn_back"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="23dp"/>
    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/Detect_card"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>
    <RelativeLayout
        android:id="@+id/notifiCardHolder"
        android:layout_width="400dp"
        android:layout_height="176dp"
        android:background="@drawable/shape_shadow"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnBack"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">
            <ImageView
                android:id="@+id/imgDetect"
                android:layout_width="148dp"
                android:layout_height="166dp"
                android:src="@drawable/img_detect"/>
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/roboto"
                    android:text="@string/detect_title1"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="13sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/is_that_you"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp">
                    <Button
                        android:id="@+id/btnYes"
                        android:layout_width="120dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/button_wave_effect"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/yes"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                    <Button
                        android:id="@+id/btnNo"
                        android:layout_width="120dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="7dp"
                        android:background="@drawable/button_wave_eff"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/no"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
    <ImageView
        android:id="@+id/imageExpand"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/notifiCardHolder"
        android:layout_centerHorizontal="true" />
    </RelativeLayout>