<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_buy_gas"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/btn_back_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/effect_btn_back"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"/>
        </RelativeLayout>
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerHorizontal="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/imggas" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/Gasoline"
                        android:textColor="#52B934"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="80dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/fill_money"
                        android:textColor="#52B934"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/money_gas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/soluong"
                        android:hint="@string/Amount"
                        android:inputType="number"
                        android:paddingLeft="15dp"
                        android:paddingRight="120dp" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="29dp"
                        android:layout_marginTop="100dp"
                        android:background="@drawable/button_wave_eff"
                        android:text="@string/go_to_payment"
                        android:textColor="@color/white" />
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>



</FrameLayout>