<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen_signup"
    android:background="@drawable/shape_gradient_home">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/btnChoseAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/chose_avt_register"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                />
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/imgAvatarChosen"
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:civ_border_width="3dp"
                app:civ_border_color="#ffffff"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                />
            <RelativeLayout
                android:id="@+id/form_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnChoseAvatar"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/Email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="50dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#d3ffffff"
                    android:textSize="18sp"
                    android:background="@drawable/bg_fill_email_log"/>

                <EditText
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Email"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/Your_name"
                    android:inputType="textPersonName"
                    android:paddingLeft="50dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#d3ffffff"
                    android:textSize="18sp"
                    android:background="@drawable/bg_fill_name_log"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="50dp"
                    android:textColor="#ffff"
                    android:textColorHint="#d3ffffff"
                    android:background="@drawable/bg_fill_pass_log"/>

                <EditText
                    android:id="@+id/repassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/repass"
                    android:inputType="textPassword"
                    android:paddingLeft="50dp"
                    android:textColor="#ffff"
                    android:textColorHint="#d3ffffff"
                    android:background="@drawable/bg_fill_pass_log"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/btn_signup_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/form_container"
                android:layout_centerHorizontal="true">
                <ProgressBar
                    android:id="@+id/proGressbar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="35dp"
                    android:layout_centerHorizontal="true"
                    />
                <Button
                    android:id="@+id/btnsignup"
                    android:layout_width="328dp"
                    android:layout_height="52dp"
                    android:text="@string/sign_up"
                    android:fontFamily="@font/montserrat_bold"
                    android:background="@drawable/button_wave_eff_login"
                    android:textColor="#1C43E1"
                    android:textSize="12pt"
                    android:layout_marginTop="30dp"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnsignin2"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="50dp"
            android:background="#A7EBBE"
            android:fontFamily="@font/roboto"
            android:text="@string/sign_in"
            android:textColor="#22439B" />
        <Button
            android:id="@+id/btnsignup2"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="50dp"
            android:background="#5FD59E"
            android:text="@string/sign_up"
            android:textColor="#22439B"
            android:fontFamily="@font/roboto" />
    </LinearLayout>

</RelativeLayout>